--- a/frontend/app/views/joiner/detail/addressForm.scala.html
+++ b/frontend/app/views/joiner/detail/addressForm.scala.html
@@ -1,4 +1,7 @@
+@()(implicit token: play.filters.csrf.CSRF.Token)
+
 @import configuration.Config
+@import helper._
 
 @main("Address Details") {
 
@@ -7,6 +10,7 @@
     @fragments.tickets.ticketsFunnel(3, StepThree= "Enter location details", StepFour = "")
 
     <form action="" method="POST" id="payment-form" class="form form-primary-container js-address-form">
+        @CSRF.formField
         @fragments.form.errorMessageDisplay()
         @fragments.form.nameDetail()
         @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", false)
