--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -1,7 +1,8 @@
-@(currentTier: com.gu.membership.salesforce.Tier.Tier)
+@(currentTier: com.gu.membership.salesforce.Tier.Tier)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import com.gu.membership.salesforce.Tier
 @import configuration.Config
+@import helper._
 
 @main("Cancel Tier") {
 
@@ -55,6 +56,7 @@
                             </span>
 
                             <form style="float: right" action="/tier/change/friend" method="POST">
+                                @CSRF.formField
                                 <button class="action-cta action-cta--confirm action-cta--full-width-mobile">Become a friend</button>
                             </form>
                         </div>
@@ -66,6 +68,7 @@
         <h2 class="section-sub-headline">How can we make Guardian Membership better? Tell us what you think.</h2>
 
         <form method="POST" action="/tier/cancel/confirm">
+            @CSRF.formField
             <fieldset class="fieldset">
                 <div class="form-field">
                     <p>What is the main reason you are leaving Guardian Membership?</p>
