--- a/frontend/app/views/tier/upgrade/upgradeForm.scala.html
+++ b/frontend/app/views/tier/upgrade/upgradeForm.scala.html
@@ -1,11 +1,12 @@
-@(targetTier: com.gu.membership.salesforce.Tier.Tier)
+@(targetTier: com.gu.membership.salesforce.Tier.Tier)(implicit token: play.filters.csrf.CSRF.Token)
+@import helper._
 
 @main("Upgrade Payment") {
 
     @fragments.layout.sectionHeader("Payment")
 
     <form action="" method="POST" id="payment-form" class="form form-primary-container js-stripe-form" data-change-to-tier="@targetTier">
-
+        @CSRF.formField
         @fragments.form.errorMessageDisplay()
         @fragments.form.addressDetail("Delivery address", "Where we'll send your welcome pack", "deliveryAddress", true)
         @fragments.form.cardDetail()
