--- a/frontend/app/views/fragments/form/feedback.scala.html
+++ b/frontend/app/views/fragments/form/feedback.scala.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="form-field">
-            <label class="label" for="page">page(web address/url)
+            <label class="label" for="page">Page (web address/url)
                 <input class="text-input text-input--block" name="page" id="page" type="text"/>
             </label>
         </div>
