--- a/frontend/app/views/info/feedback.scala.html
+++ b/frontend/app/views/info/feedback.scala.html
@@ -1,4 +1,6 @@
-@()
+@()(implicit token: play.filters.csrf.CSRF.Token)
+
+@import helper.CSRF
 
 @main("Feedback") {
     @fragments.layout.sectionHeader("Feedback")
@@ -10,6 +12,8 @@
     <p>If you’re having any problems please visit our help section.</p>
 
     <form action="" method="POST" id="feedback-form" class="form form-primary-container js-feedback-form">
+        @CSRF.formField
+
         @fragments.form.errorMessageDisplay()
         @fragments.form.feedback()
         @fragments.form.submit("Send feedback now")
